fix: group row v-align

--- a/src/styles/components/elements/data-table.module.scss
+++ b/src/styles/components/elements/data-table.module.scss
@@ -120,6 +120,7 @@ $borderStyle: 1px solid var(--c-border);
 
   >.grow {
     flex: 1;
+    max-height: 100%;
   }
 }
 
